csbind/joltc_bindgen.cs


        [DllImport(__DllName, EntryPoint = "JPH_SoftBodyCreationSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_SoftBodyCreationSettings* JPH_SoftBodyCreationSettings_Create();

        [DllImport(__DllName, EntryPoint = "JPH_SoftBodyCreationSettings_Destroy", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_SoftBodyCreationSettings_Destroy(JPH_SoftBodyCreationSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_ConstraintSettings_Destroy", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_ConstraintSettings_Destroy(JPH_ConstraintSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_ConstraintSettings_GetEnabled", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool JPH_ConstraintSettings_GetEnabled(JPH_ConstraintSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraintSettings_SetEnabled", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_FixedConstraintSettings_SetEnabled(JPH_ConstraintSettings* settings, [MarshalAs(UnmanagedType.U1)] bool value);

        [DllImport(__DllName, EntryPoint = "JPH_ConstraintSettings_GetConstraintPriority", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_ConstraintSettings_GetConstraintPriority(JPH_ConstraintSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraintSettings_SetConstraintPriority", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_FixedConstraintSettings_SetConstraintPriority(JPH_ConstraintSettings* settings, uint value);

        [DllImport(__DllName, EntryPoint = "JPH_ConstraintSettings_GetNumVelocityStepsOverride", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_ConstraintSettings_GetNumVelocityStepsOverride(JPH_ConstraintSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_ConstraintSettings_SetNumVelocityStepsOverride", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_ConstraintSettings_SetNumVelocityStepsOverride(JPH_ConstraintSettings* settings, uint value);

        [DllImport(__DllName, EntryPoint = "JPH_ConstraintSettings_GetNumPositionStepsOverride", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_ConstraintSettings_GetNumPositionStepsOverride(JPH_ConstraintSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_ConstraintSettings_SetNumPositionStepsOverride", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_ConstraintSettings_SetNumPositionStepsOverride(JPH_ConstraintSettings* settings, uint value);

        [DllImport(__DllName, EntryPoint = "JPH_ConstraintSettings_GetDrawConstraintSize", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_ConstraintSettings_GetDrawConstraintSize(JPH_ConstraintSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_ConstraintSettings_SetDrawConstraintSize", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_ConstraintSettings_SetDrawConstraintSize(JPH_ConstraintSettings* settings, float value);

        [DllImport(__DllName, EntryPoint = "JPH_ConstraintSettings_GetUserData", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern ulong JPH_ConstraintSettings_GetUserData(JPH_ConstraintSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_ConstraintSettings_SetUserData", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_ConstraintSettings_SetUserData(JPH_ConstraintSettings* settings, ulong value);

        [DllImport(__DllName, EntryPoint = "JPH_Constraint_GetConstraintSettings", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_ConstraintSettings* JPH_Constraint_GetConstraintSettings(JPH_Constraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_Constraint_GetType", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_Constraint_GetType(JPH_Constraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_Constraint_GetSubType", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_Constraint_GetSubType(JPH_Constraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_Constraint_GetConstraintPriority", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_Constraint_GetConstraintPriority(JPH_Constraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_Constraint_SetConstraintPriority", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_Constraint_SetConstraintPriority(JPH_Constraint* constraint, uint priority);

        [DllImport(__DllName, EntryPoint = "JPH_Constraint_GetEnabled", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool JPH_Constraint_GetEnabled(JPH_Constraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_Constraint_SetEnabled", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_Constraint_SetEnabled(JPH_Constraint* constraint, [MarshalAs(UnmanagedType.U1)] bool enabled);

        [DllImport(__DllName, EntryPoint = "JPH_Constraint_GetUserData", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern ulong JPH_Constraint_GetUserData(JPH_Constraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_Constraint_SetUserData", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_Constraint_SetUserData(JPH_Constraint* constraint, ulong userData);

        [DllImport(__DllName, EntryPoint = "JPH_Constraint_NotifyShapeChanged", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_Constraint_NotifyShapeChanged(JPH_Constraint* constraint, uint bodyID, JPH_Vec3* deltaCOM);

        [DllImport(__DllName, EntryPoint = "JPH_Constraint_Destroy", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_Constraint_Destroy(JPH_Constraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraintSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_FixedConstraintSettings* JPH_FixedConstraintSettings_Create();

        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraintSettings_GetSpace", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_FixedConstraintSettings_GetSpace(JPH_FixedConstraintSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraintSettings_SetSpace", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_FixedConstraintSettings_SetSpace(JPH_FixedConstraintSettings* settings, uint space);

        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraintSettings_GetAutoDetectPoint", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool JPH_FixedConstraintSettings_GetAutoDetectPoint(JPH_FixedConstraintSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraintSettings_SetAutoDetectPoint", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_FixedConstraintSettings_SetAutoDetectPoint(JPH_FixedConstraintSettings* settings, [MarshalAs(UnmanagedType.U1)] bool value);

        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraintSettings_GetPoint1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_FixedConstraintSettings_GetPoint1(JPH_FixedConstraintSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraintSettings_SetPoint1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_FixedConstraintSettings_SetPoint1(JPH_FixedConstraintSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraintSettings_GetAxisX1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_FixedConstraintSettings_GetAxisX1(JPH_FixedConstraintSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraintSettings_SetAxisX1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_FixedConstraintSettings_SetAxisX1(JPH_FixedConstraintSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraintSettings_GetAxisY1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_FixedConstraintSettings_GetAxisY1(JPH_FixedConstraintSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraintSettings_SetAxisY1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_FixedConstraintSettings_SetAxisY1(JPH_FixedConstraintSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraintSettings_GetPoint2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_FixedConstraintSettings_GetPoint2(JPH_FixedConstraintSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraintSettings_SetPoint2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_FixedConstraintSettings_SetPoint2(JPH_FixedConstraintSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraintSettings_GetAxisX2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_FixedConstraintSettings_GetAxisX2(JPH_FixedConstraintSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraintSettings_SetAxisX2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_FixedConstraintSettings_SetAxisX2(JPH_FixedConstraintSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraintSettings_GetAxisY2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_FixedConstraintSettings_GetAxisY2(JPH_FixedConstraintSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraintSettings_SetAxisY2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_FixedConstraintSettings_SetAxisY2(JPH_FixedConstraintSettings* settings, JPH_Vec3* value);
